<resources>
    <string name="app_name">JarviceApp</string>
    <string name="welcome_messsage">Welcome!</string>
    <string name="login_messsage">Please login first!</string>
    <string name="username">username...</string>
    <string name="password">password...</string>
    <string name="tv_forgotten_password">Forgotten Password?</string>
    <string name="login">Login</string>
    <string name="login_messsage_method">Or Login With</string>
    <string name="login_google">Continue with Google</string>
    <string name="login_facebook">Continue with Facebook</string>
    <string name="login_messsage_new_account">New to the app? Signup</string>
    <string name="email">email...</string>
    <string name="password_confirmation">confirmation password...</string>
    <string name="signup_messsage_method">Or Signup With</string>
    <string name="signup_messsage_account">Already have an account? Sign in</string>
    <string name="signup_messsage">Please fill this form!</string>
    <string name="signup">signup</string>
    <string name="invalid_email">The email is not valid!</string>
    <string name="invalid_password">Password must at least 6 or more</string>
    <string name="invalid_confirmation_password">password does not match</string>
    <string name="invalid_validation">please fill in the field correctly</string>
    <string name="title_alert_dialog">Success</string>
    <string name="message_alert_dialog">The account has been created successful!</string>
    <string name="message_positive_button">next</string>
    <string name="message_alert_dialog_login">Login success!</string>
    <string name="empty_field">Empty field are not allowed!</string>
    <string name="invalid_account">account not found</string>
    <string name="facebook_app_id">3464430617126624</string>
    <string name="facebook_client_token">a5575bfecce5c1411a009bb58597106b</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_profile">Profile</string>
    <string name="welcome_main">Welcome!</string>
    <string name="welcome_main_username">Fetching Username...</string>
    <string name="inpuJob">Find jobs, company...</string>
    <string name="banner_job">Latest Job</string>
    <string name="recommend_job">Jobs Recommendation</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="emailuser_domain_com">Fetching Email...</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="keahlian">Keahlian</string>
    <string name="logout">Logout</string>
    <string name="nama_lowongan">Nama Lowongan</string>
    <string name="nama_company">Nama Company</string>
    <string name="loading">Loading</string>
    <string name="masukkan_data_barumu">Masukkan Data Barumu</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="batal">Batal</string>
    <string name="isi_keahlian">Isikan Keahlianmu!</string>
    <string name="simpan">Simpan</string>
    <string name="jobs_detail_title">Detail Jobs</string>
    <string name="jobs_name_title">Jobs</string>
    <string name="company_name_title">Company</string>
    <string name="category_name_title">Category</string>
    <string name="location_name_title">Company location</string>
    <string name="level_name_title">Jobs level</string>
    <string name="date_name_title">Vacany date</string>
    <string name="tag_name_title">Tag</string>
    <string name="two_dot">:</string>
    <string name="fill">.....</string>
    <string name="detail_title">Vacancy Detail</string>
    <string name="bt_landing_page">Landing Page</string>
    <string name="bt_web_page">Web Page</string>
    <string name="time_name_title">Full Time</string>
    <string name="range_salary">Range Salary</string>
    <string name="title_fragment_bookmark">Yours Bookmark</string>
    <string name="log_message">Yours bookmark is empty</string>
</resources>