<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.jarvice.ui.bottomNavigation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_explore4"
            app:destination="@id/navigation_explore" />
    </fragment>

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.capstone.jarvice.ui.bottomNavigation.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" >
        <argument
            android:name="SEARCH"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.capstone.jarvice.ui.bottomNavigation.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.jarvice.ui.bottomNavigation.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>